--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	      </li>
 	
 		  <li class="nav-item">
-	        <a class="btn btn-outline color-white" href="/home.html">Login</a>
+	        <a class="btn btn-outline color-white" href="home.html">Login</a>
 	      </li>
 	
 	      <li class="nav-item">
