--- a/analysis-5.html
+++ b/analysis-5.html
@@ -39,8 +39,8 @@
               <a class="nav-link dropdown-toggle p text-medium" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">EN <i class="ionicons ion-chevron-down color-grey-light ml-"></i></a>
               <div class="dropdown-menu p">
                 <ul class="list-unstyled">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">EN</a></li>
+                  <li><a class="dropdown-item" href="#">FR</a></li>
                 </ul>
               </div>
             </li>
@@ -279,7 +279,7 @@
 	<div class="pull-right">
 	  	<div class="clearfix">
 	  		<p class="color-white pull-left mr">Last modified on 03/12/2017 à 12:17, <br>Par Denis C. - INSA</p>
-	  		<a href="transition-6.html" class="btn btn-default color-blue-2 pull-right">Continue</a>
+	  		<a href="transition-6.html" class="btn btn-default color-blue-2 pull-right js-btn-loading">Continue</a>
 	  	</div>
 	</div>
 
@@ -302,6 +302,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.0.7/jsPlumb.min.js"></script>
 
 <script src="javascripts/jquery.panzoom.min.js"></script>
+
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
 
@@ -411,6 +415,6 @@ $('.slider').slider({
 
   
 </script>
-
+  
   </body>
 </html>
