--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
               <a class="nav-link dropdown-toggle p text-medium" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">EN <i class="ionicons ion-chevron-down color-grey-light ml-"></i></a>
               <div class="dropdown-menu p">
                 <ul class="list-unstyled">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">EN</a></li>
+                  <li><a class="dropdown-item" href="#">FR</a></li>
                 </ul>
               </div>
             </li>
@@ -252,6 +252,6 @@
 		
 	</div>
 </div>
-
+  
   </body>
 </html>
