--- a/definition.html
+++ b/definition.html
@@ -40,8 +40,8 @@
               <a class="nav-link dropdown-toggle p text-medium" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">EN <i class="ionicons ion-chevron-down color-grey-light ml-"></i></a>
               <div class="dropdown-menu p">
                 <ul class="list-unstyled">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">EN</a></li>
+                  <li><a class="dropdown-item" href="#">FR</a></li>
                 </ul>
               </div>
             </li>
@@ -136,7 +136,7 @@
     <div class="col-sm-4">
         <div class="card">
 	<p class="text-bold color-grey pl pt pr">Progress</p>
-	<p class="pl pb pr"><span class="text-bold color-blue">10%  :</span> <span class="color-grey">Patent analysis</span></p>
+	<p class="pl pb pr"><span class="text-bold color-blue">10%  :</span> <span class="color-grey">SUN diagram set-up</span></p>
 	<div class="progress">
 	  <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
 	  </div>
@@ -258,7 +258,7 @@
               </div>
             </div>
           </div>
-          <a href="#" class="btn btn--plus mt">Add a member</a>
+          <a href="#" class="btn btn--plus mt">Add a file</a>
         </div>
           
       </form>
@@ -273,7 +273,7 @@
 	<div class="pull-right">
 	  	<div class="clearfix">
 	  		<p class="color-white pull-left mr">Last modified on 03/12/2017 à 12:17, <br>Par Denis C. - INSA</p>
-	  		<a href="transition-1.html" class="btn btn-default color-blue-2 pull-right">Continue</a>
+	  		<a href="transition-1.html" class="btn btn-default color-blue-2 pull-right js-btn-loading">Continue</a>
 	  	</div>
 	</div>
 
@@ -295,6 +295,10 @@
 
 <script src="javascripts/jquery.panzoom.min.js"></script>
 
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
 
 <script src="javascripts/Chart.bundle.min.js"></script>
@@ -307,6 +311,6 @@
 </script>
 
 
-
+  
   </body>
 </html>
