--- a/transition-6.html
+++ b/transition-6.html
@@ -39,8 +39,8 @@
               <a class="nav-link dropdown-toggle p text-medium" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">EN <i class="ionicons ion-chevron-down color-grey-light ml-"></i></a>
               <div class="dropdown-menu p">
                 <ul class="list-unstyled">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">EN</a></li>
+                  <li><a class="dropdown-item" href="#">FR</a></li>
                 </ul>
               </div>
             </li>
@@ -117,11 +117,15 @@
   </div>
   </div>
 
-<div class="padded">  <div class="loading">
-    <div class="loading__dot"></div>
-    <div class="loading__line"></div>
-    <div class="loading__mask"></div>
-  </div>
+<div class="padded"><div class="animated bounceInLeft">
+	<div class="loading">
+		<div class="loading__dot"></div>
+		<div class="loading__line"></div>
+		<div class="loading__mask"></div>
+	</div>
+	<p class="animated bounceInLeft text-center text-condensed mt color-grey-light">Saving</p>
+</div>
+
 </div>
 
 
@@ -132,11 +136,11 @@
 	<div class="pull-right">
 	  	<div class="clearfix">
 	  		<p class="color-white pull-left mr">Saving... <br>Par Denis C. - INSA</p>
-	  		<a href="analysis-6.html" class="btn btn-default color-blue-2 pull-right">Continue</a>
+	  		<a href="analysis-6.html" class="btn btn-default color-blue-2 pull-right js-btn-loading">Continue</a>
 	  	</div>
 	</div>
 
 </nav>
-
+  
   </body>
 </html>
