--- a/analysis-2.html
+++ b/analysis-2.html
@@ -129,7 +129,7 @@
     <div class="row">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
+          <li><a href="analysis.html" class="color-grey">Sélection</a></li>
           <li class="active">Categorizarion</li>
           <li class="next">Connection PBSOL</li>
           <li class="next">Contradictions</li>
@@ -324,21 +324,21 @@
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">0</div>
+                  <div class="label__number">23</div>
                 </span>
 
                 <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">Store enery in spring</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">23</div>
+                  <div class="label__number">28</div>
                 </span>
 
                 <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number ">28</div>
+                  <div class="label__number ">4</div>
                 </span>
 
 
@@ -346,14 +346,36 @@
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">24</div>
+                  <div class="label__number">12</div>
                 </span>
 
                 <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">Store enery in spring</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">3</div>
+                  <div class="label__number">8</div>
+                </span>
+
+                <span class="label label-default">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">2nd pawl</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number ">13</div>
+                </span>
+
+
+                <span class="label label-default">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number">23</div>
+                </span>
+
+                <span class="label label-default">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">Store enery in spring</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number">5</div>
                 </span>
 
                 <span class="label label-default">
@@ -368,7 +390,7 @@
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">16</div>
+                  <div class="label__number">15</div>
                 </span>
 
                 <span class="label label-default">
@@ -390,65 +412,21 @@
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">14</div>
+                  <div class="label__number">8</div>
                 </span>
 
                 <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">Store enery in spring</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">6</div>
+                  <div class="label__number">20</div>
                 </span>
 
                 <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number ">14</div>
-                </span>
-
-
-                <span class="label label-default">
-                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">14</div>
-                </span>
-
-                <span class="label label-default">
-                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-                  <span class="label__text">Store enery in spring</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">25</div>
-                </span>
-
-                <span class="label label-default">
-                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-                  <span class="label__text">2nd pawl</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number ">21</div>
-                </span>
-
-
-                <span class="label label-default">
-                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">21</div>
-                </span>
-
-                <span class="label label-default">
-                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-                  <span class="label__text">Store enery in spring</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number">6</div>
-                </span>
-
-                <span class="label label-default">
-                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-                  <span class="label__text">2nd pawl</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number ">12</div>
+                  <div class="label__number ">4</div>
                 </span>
 
 
@@ -470,7 +448,29 @@
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">2nd pawl</span>
                   <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
-                  <div class="label__number ">11</div>
+                  <div class="label__number ">15</div>
+                </span>
+
+
+                <span class="label label-default">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number">6</div>
+                </span>
+
+                <span class="label label-default">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">Store enery in spring</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number">6</div>
+                </span>
+
+                <span class="label label-default">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">2nd pawl</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number ">21</div>
                 </span>
 
           </div>
