--- a/analysis-3.html
+++ b/analysis-3.html
@@ -129,8 +129,8 @@
     <div class="row">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
+          <li><a href="analysis.html" class="color-grey">Sélection</a></li>
+          <li><a href="analysis-2.html" class="color-grey">Categorizarion</a></li>
           <li class="active">Connection PBSOL</li>
           <li class="next">Contradictions</li>
           <li class="next">Business Drivers</li>
@@ -183,6 +183,9 @@
                 <i class="fa fa-puzzle-piece fa-2 pull-left"></i>
 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
+
               </div>
 
               <div class="mini-card__anchor" id="a">
@@ -199,6 +202,9 @@
                 <i class="fa fa-puzzle-piece fa-2 pull-left"></i>
 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
+
               </div>
 
               <div class="mini-card__anchor" id="a">
@@ -215,6 +221,9 @@
                 <i class="fa fa-puzzle-piece fa-2 pull-left"></i>
 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
+
               </div>
 
               <div class="mini-card__anchor" id="a">
@@ -231,6 +240,9 @@
                 <i class="fa fa-puzzle-piece fa-2 pull-left"></i>
 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
+
               </div>
 
               <div class="mini-card__anchor" id="a">
@@ -247,6 +259,9 @@
                 <i class="fa fa-puzzle-piece fa-2 pull-left"></i>
 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
+
               </div>
 
               <div class="mini-card__anchor" id="a">
@@ -263,6 +278,9 @@
                 <i class="fa fa-puzzle-piece fa-2 pull-left"></i>
 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
+
               </div>
 
               <div class="mini-card__anchor" id="a">
@@ -296,6 +314,8 @@
                       <i class="fa fa-lightbulb-o pull-left fa-2"></i>
 
                       <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                      <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
                     </div>
 
                     <div class="mini-card__anchor">
@@ -311,6 +331,8 @@
                       <i class="fa fa-lightbulb-o pull-left fa-2"></i>
 
                       <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                      <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
                     </div>
 
                     <div class="mini-card__anchor">
@@ -326,6 +348,8 @@
                       <i class="fa fa-lightbulb-o pull-left fa-2"></i>
 
                       <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                      <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
                     </div>
 
                     <div class="mini-card__anchor">
@@ -341,6 +365,8 @@
                       <i class="fa fa-lightbulb-o pull-left fa-2"></i>
 
                       <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                      <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
                     </div>
 
                     <div class="mini-card__anchor">
@@ -356,6 +382,8 @@
                       <i class="fa fa-lightbulb-o pull-left fa-2"></i>
 
                       <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+
+                      <textarea class="form-control-2 hidden" row="30" col="100">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</textarea>
                     </div>
 
                     <div class="mini-card__anchor">
@@ -495,6 +523,8 @@
     e.preventDefault();
     $(this).toggleText('Done', 'Edit');
     $(".mini-card--pink .mini-card__delete").toggleClass("hidden");
+    $(".mini-card--pink textarea").toggleClass("hidden");
+    $(".mini-card--pink p").toggleClass("hidden");
     
   });
 
@@ -503,7 +533,9 @@
     e.preventDefault();
     $(this).toggleText('Done', 'Edit');
     $(".mini-card--green .mini-card__delete").toggleClass("hidden");
-    
+    $(".mini-card--green textarea").toggleClass("hidden");
+    $(".mini-card--green p").toggleClass("hidden");
+
   });
 
 
