--- a/analysis-5.html
+++ b/analysis-5.html
@@ -128,10 +128,10 @@
     <div class="row no-gutter">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Extraction</li>
-          <li>Contradictions</li>
+          <li><a href="analysis.html" class="color-grey">Sélection</a></li>
+          <li><a href="analysis-2.html" class="color-grey">Categorizarion</a></li>
+          <li><a href="analysis-3.html" class="color-grey">Connection PBSOL</a></li>
+          <li><a href="analysis-4.html" class="color-grey">Contradictions</a></li>
           <li class="active">Business Drivers</li>
           <li class="next">Evaluation criteria</li>
           <li class="next">Evaluation</li>
