--- a/analysis-8.html
+++ b/analysis-8.html
@@ -128,12 +128,12 @@
     <div class="row no-gutter">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Extraction</li>
-          <li>Contradictions</li>
-          <li>Business Drivers</li>
-          <li>Evaluation criteria</li>
+          <li><a href="analysis.html" class="color-grey">Sélection</a></li>
+          <li><a href="analysis-2.html" class="color-grey">Categorizarion</a></li>
+          <li><a href="analysis-3.html" class="color-grey">Connection PBSOL</a></li>
+          <li><a href="analysis-4.html" class="color-grey">Contradictions</a></li>
+          <li><a href="analysis-5.html" class="color-grey">Business Drivers</a></li>
+          <li><a href="analysis-6.html" class="color-grey">Evaluation criteria</a></li>
           <li class="active">Evaluation</li>
         </ul>
         <p class="text-left text-italic color-grey text-light mt-">Evaluate each stakeholders technologies by the defined evaluation criteria</p>
