--- a/analysis-4.html
+++ b/analysis-4.html
@@ -129,9 +129,9 @@
     <div class="row">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Connection PBSOL</li>
+          <li><a href="analysis.html" class="color-grey">Sélection</a></li>
+          <li><a href="analysis-2.html" class="color-grey">Categorizarion</a></li>
+          <li><a href="analysis-3.html" class="color-grey">Connection PBSOL</a></li>
           <li class="active">Contradictions</li>
           <li class="next">Business Drivers</li>
           <li class="next">Evaluation criteria</li>
@@ -178,18 +178,18 @@
 
         <div class="contradictions p+">
 
-            <div class="contradictions__count animated">1</div>
+            <div class="contradictions__count animated">A</div>
 
 
-            <p class="h1 pull-left">TC1</p>
+            <h1 class="pull-left">TC A</h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
@@ -249,18 +249,18 @@
 
         <div class="contradictions p+">
 
-            <div class="contradictions__count animated">2</div>
+            <div class="contradictions__count animated">B</div>
 
 
-            <p class="h1 pull-left">TC2</p>
+            <h1 class="pull-left">TC B</h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
@@ -320,18 +320,18 @@
 
         <div class="contradictions p+">
 
-            <div class="contradictions__count animated">3</div>
+            <div class="contradictions__count animated">C</div>
 
 
-            <p class="h1 pull-left">TC3</p>
+            <h1 class="pull-left">TC C</h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
@@ -391,18 +391,18 @@
 
         <div class="contradictions p+">
 
-            <div class="contradictions__count animated">4</div>
+            <div class="contradictions__count animated">D</div>
 
 
-            <p class="h1 pull-left">TC4</p>
+            <h1 class="pull-left">TC D</h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
@@ -462,18 +462,18 @@
 
         <div class="contradictions p+">
 
-            <div class="contradictions__count animated">5</div>
+            <div class="contradictions__count animated">E</div>
 
 
-            <p class="h1 pull-left">TC5</p>
+            <h1 class="pull-left">TC E</h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
@@ -533,160 +533,18 @@
 
         <div class="contradictions p+">
 
-            <div class="contradictions__count animated">6</div>
+            <div class="contradictions__count animated">F</div>
 
 
-            <p class="h1 pull-left">TC6</p>
-
-            <table class="table table-bordered bg-white mb0 contradictions__tb-header">
-              <tr>
-                <th colspan="2"><div class="text-center">Action parameter</div></th>
-              </tr>
-              <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
-              </tr>
-            </table>
-
-            <table class="table table-bordered bg-white">
-              <tbody>
-                <tr>
-                  <td valign="center" style="width: 50%;">Lorem ipsum</td>
-                  <td class="text-center">
-                    <i class="fa fa-2 fa-smile-o color-green"></i>
-                  </td>
-                  <td class="text-center"><i class="fa fa-2 fa-frown-o color-pink"></i></td>
-                </tr>
-                <tr>
-                  <td style="width: 50%;">Lorem ipsum</td>
-                  <td class="text-center">
-                    <i class="fa fa-2 fa-frown-o color-pink"></i>
-                  </td>
-                  <td class="text-center">
-                    <i class="fa fa-2 fa-smile-o color-green"></i>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="bg-grey-light pl+ pr+ pt pb">
-
-          <div class="clearfix">
-            <span class="label label-default mr- mb- pull-left">
-              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-              <span class="label__text">Store enery in spring</span>
-            </span>
-
-            <span class="label label-default mr- mb- pull-left">
-              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-              <span class="label__text">Claw linked linked</span>
-            </span>
-
-            <span class="label label-default mr- mb- pull-left">
-              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-              <span class="label__text">Rolling contact</span>
-            </span>
-          </div>
-
-          <p class="mt"><strong>Lorem ipsum dolor</strong> sit amet, <strong>consectetur adipiscing elit</strong>. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. <strong>Proin sodales pulvinar tempor</strong>.</p>
-        </div>
-      </div>
-
-      <div class="card animated mb">
-
-        <div class="card__handles">
-          <i class="ionicons ion-ios-arrow-up color-white js-move-up"></i>
-          <i class="ionicons ion-ios-arrow-down color-white js-move-down"></i>
-          <i class="ionicons ion-android-close color-white hidden js-remove-contradiction"></i>
-        </div>
-
-
-
-        <div class="contradictions p+">
-
-            <div class="contradictions__count animated">7</div>
-
-
-            <p class="h1 pull-left">TC7</p>
+            <h1 class="pull-left">TC F</h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
-              </tr>
-            </table>
-
-            <table class="table table-bordered bg-white">
-              <tbody>
-                <tr>
-                  <td valign="center" style="width: 50%;">Lorem ipsum</td>
-                  <td class="text-center">
-                    <i class="fa fa-2 fa-smile-o color-green"></i>
-                  </td>
-                  <td class="text-center"><i class="fa fa-2 fa-frown-o color-pink"></i></td>
-                </tr>
-                <tr>
-                  <td style="width: 50%;">Lorem ipsum</td>
-                  <td class="text-center">
-                    <i class="fa fa-2 fa-frown-o color-pink"></i>
-                  </td>
-                  <td class="text-center">
-                    <i class="fa fa-2 fa-smile-o color-green"></i>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="bg-grey-light pl+ pr+ pt pb">
-
-          <div class="clearfix">
-            <span class="label label-default mr- mb- pull-left">
-              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-              <span class="label__text">Store enery in spring</span>
-            </span>
-
-            <span class="label label-default mr- mb- pull-left">
-              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-              <span class="label__text">Claw linked linked</span>
-            </span>
-
-            <span class="label label-default mr- mb- pull-left">
-              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
-              <span class="label__text">Rolling contact</span>
-            </span>
-          </div>
-
-          <p class="mt"><strong>Lorem ipsum dolor</strong> sit amet, <strong>consectetur adipiscing elit</strong>. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. <strong>Proin sodales pulvinar tempor</strong>.</p>
-        </div>
-      </div>
-
-      <div class="card animated mb">
-
-        <div class="card__handles">
-          <i class="ionicons ion-ios-arrow-up color-white js-move-up"></i>
-          <i class="ionicons ion-ios-arrow-down color-white js-move-down"></i>
-          <i class="ionicons ion-android-close color-white hidden js-remove-contradiction"></i>
-        </div>
-
-
-
-        <div class="contradictions p+">
-
-            <div class="contradictions__count animated">8</div>
-
-
-            <p class="h1 pull-left">TC8</p>
-
-            <table class="table table-bordered bg-white mb0 contradictions__tb-header">
-              <tr>
-                <th colspan="2"><div class="text-center">Action parameter</div></th>
-              </tr>
-              <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
@@ -808,6 +666,13 @@
   //   // `this` is the DOM element that was clicked
   // });
 
+  $(document).ready(function(){
+    $(".card").each(function(){
+      var index = $(this).index();
+      $(this).find( ".contradictions__count" ).text(index+1);  
+    })
+    
+  });
 
   $(".js-move-down").click(function(){
 
