--- a/analysis-6.html
+++ b/analysis-6.html
@@ -128,11 +128,11 @@
     <div class="row">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Extraction</li>
-          <li>Contradictions</li>
-          <li>Business Drivers</li>
+          <li><a href="analysis.html" class="color-grey">Sélection</a></li>
+          <li><a href="analysis-2.html" class="color-grey">Categorizarion</a></li>
+          <li><a href="analysis-3.html" class="color-grey">Connection PBSOL</a></li>
+          <li><a href="analysis-4.html" class="color-grey">Contradictions</a></li>
+          <li><a href="analysis-5.html" class="color-grey">Business Drivers</a></li>
           <li class="active">Evaluation criteria</li>
           <li class="next">Evaluation</li>
         </ul>
@@ -704,6 +704,12 @@
       "</div>")
     $(this).parent().after(newBusinessDrive);
   });
+
+  $(document).on('click', '.js-remove-driver', function(){
+      var $that = $(this);
+      $that.parent().parent().addClass("animated zoomOut").slideUp();
+  });
+
 
 
   $(".js-edit-technologies").click(function(e){
