--- a/analysis.html
+++ b/analysis.html
@@ -204,7 +204,7 @@
 
             </li>
 
-            <li class="dropdown">
+            <!-- <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Any date <i class="ionicons ion-chevron-down ml-"></i></a>
 
                 <div class="dropdown-menu p" style="width: 260px;">
@@ -224,6 +224,18 @@
                           </div>
                       </div>
                     </div>
+                </div>
+
+            </li> -->
+
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Any date <i class="ionicons ion-chevron-down ml-"></i></a>
+
+                <div class="dropdown-menu p">
+                  <ul class="list-unstyled">
+                    <li><a class="dropdown-item" href="#">Most recent</a></li>
+                    <li><a class="dropdown-item" href="#">Oldest</a></li>
+                  </ul>
                 </div>
 
             </li>
